--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -2,10 +2,12 @@
 name = "back"
 version = "0.1.0"
 edition = "2021"
+debuginfo-level = 1
+jemalloc = false
 
 [dependencies]
 actix-web = "4"
-chrono = {version = "0.4"}
+chrono = {version = "0.4", features = ["serde"]}
 serde = { version = "1", features = ["derive"] }
 diesel = { version = "2", features = ["sqlite", "r2d2", "time", "chrono", "uuid"] }
 dotenvy = "0.15"
