--- a/front/package.json
+++ b/front/package.json
@@ -10,24 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mui/material": "5.15.16",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@mui/icons-material": "5.15.16",
-    "@fullcalendar/react": "6.1.11",
     "@fullcalendar/core": "6.1.11",
     "@fullcalendar/daygrid": "6.1.11",
-    "@fullcalendar/timegrid": "6.1.11",
     "@fullcalendar/interaction": "6.1.11",
+    "@fullcalendar/react": "6.1.11",
+    "@fullcalendar/resource-timeline": "6.1.11",
+    "@fullcalendar/timegrid": "6.1.11",
+    "@mui/icons-material": "5.15.16",
+    "@mui/material": "5.15.16",
+    "@mui/x-date-pickers": "7.4.0",
+    "axios": "1.6.8",
+    "csv-stringify": "6.4.6",
+    "luxon": "3.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "4.0.13",
-    "react-router-dom": "6.23.0",
-    "axios": "1.6.8"
+    "react-router-dom": "6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/luxon": "3.4.2",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
