--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,10 @@ services:
     command: cargo watch -x run
 
     ports:
-      - 8080:8080
+      - 127.0.0.1:5000:5000
+  front:
+    build: ./front
+    ports:
+      - 127.0.0.1:8080:80
+    depends_on:
+      - back
