--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,10 +13,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: "./back -> target"
     - name: Build
       run: cargo build --verbose
       working-directory: ./back
-    - uses: Swatinem/rust-cache@v2
     - name: Run tests
       run: cargo test --verbose
       working-directory: ./back
