--- a/.github/workflows/build.test.front.yml
+++ b/.github/workflows/build.test.front.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: 'front'
+        working-directory: './front'
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: "22.x"
         cache: 'npm'
-        cache-dependency-path: front/package-lock.json
+        cache-dependency-path: ./front/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
