--- a/.github/workflows/build.test.front.yml
+++ b/.github/workflows/build.test.front.yml
@@ -17,8 +17,7 @@ jobs:
         working-directory: './front'
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/setup-node@v3
       with:
         node-version: "22.x"
         cache: 'npm'
