--- a/.github/workflows/build.test.front.yml
+++ b/.github/workflows/build.test.front.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: './front'
+        working-directory: 'front'
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v3
