--- a/back/docker/Dockerfile
+++ b/back/docker/Dockerfile
@@ -1,14 +1,12 @@
 FROM rust:buster
 
 RUN apt-get update && apt-get install -y sqlite3 libsqlite3-dev
-
 RUN cargo install diesel_cli --no-default-features --features sqlite
-RUN cargo install cargo-watch
 
 WORKDIR /usr/src/app
 COPY . .
 
-RUN cargo install --path .
+RUN cargo build --release
 
 RUN diesel setup
 RUN diesel migration run
