--- a/front/docker/Dockerfile
+++ b/front/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM node:alpine as build
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY ../package*.json ./
 
 RUN npm install 
 
@@ -14,7 +14,7 @@ RUN npm run build
 
 FROM nginx:alpine
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY docker/nginx.conf.template /etc/nginx/templates/default.conf.template
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
