--- a/front/docker/nginx.conf.template
+++ b/front/docker/nginx.conf.template
@@ -1,24 +1,19 @@
-events {}
  
-http {
-
-
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
 
+        root /usr/share/nginx/html;
+
         server_name _;
 
         location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-            include /etc/nginx/mime.types;
+            try_files $uri /index.html;
         }
 
-        # Redirect API requests to http://back:5000
         location /api/ {
             rewrite ^/api/(.*) /$1 break;
-            proxy_pass http://back:5000;
+            proxy_pass http://${BACK_REF}:5000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,4 +23,3 @@ http {
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
     }
-}
