--- a/front/docker/Dockerfile
+++ b/front/docker/Dockerfile
@@ -3,14 +3,13 @@ FROM node:alpine as build
 
 WORKDIR /app
 
-COPY ../package*.json ./
+COPY ./package*.json ./
 
 RUN npm install 
 
 COPY . .
 
 RUN npm run build
-
 
 FROM nginx:alpine
 
