fix: migration at runtime in back + tiny image

--- a/back/docker/Dockerfile
+++ b/back/docker/Dockerfile
@@ -1,14 +1,23 @@
-FROM rust:buster
+FROM rust:buster as build
 
-RUN apt-get update && apt-get install -y sqlite3 libsqlite3-dev
-RUN cargo install diesel_cli --no-default-features --features sqlite
+WORKDIR /tmp/build
 
-WORKDIR /usr/src/app
+RUN apt-get update && apt-get install -y libsqlite3-dev
+
 COPY . .
 
 RUN cargo build --release
 
-RUN diesel setup
-RUN diesel migration run
+####### 
+
+FROM rust:buster
+
+RUN apt-get update && apt-get install -y libsqlite3-dev
+
+WORKDIR /usr/src/app
+
+COPY --from=build /tmp/build/target/release/back ./app
+
+RUN cargo install diesel_cli --no-default-features --features sqlite
 
 EXPOSE 8080
