--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,9 +67,9 @@ jobs:
       - name: Run playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: deploy/playbook.yml
+          playbook: ./deploy/playbook.yml
           key: ${{secrets.ssh-private-key}}
-          requirements: deploy/requirements.yml
+          requirements: ./deploy/requirements.yml
           options: |
             --inventory ${{secrets.server-ip}}
             --user ${{secrets.ansible-user}}
