--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -12,19 +12,19 @@ jobs:
   test-back:
     uses: ./.github/workflows/test-back.yml
 
-  publish-front:
-    permissions:
-      contents: read
-      packages: write
-      attestations: write
-      id-token: write
+  # publish-front:
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #     attestations: write
+  #     id-token: write
 
-    needs: [test-front, test-back]
-    uses: ./.github/workflows/publish-docker.yml
-    with:
-      context: "front"
-      file: "front/docker/Dockerfile"
-      image-name: "${{github.repository}}-front"
+  #   needs: [test-front, test-back]
+  #   uses: ./.github/workflows/publish-docker.yml
+  #   with:
+  #     context: "front"
+  #     file: "front/docker/Dockerfile"
+  #     image-name: "${{github.repository}}-front"
 
   # publish-back:
   #   permissions:
@@ -48,7 +48,6 @@ jobs:
       id-token: write
 
     # needs: [publish-front, publish-back]
-    needs: [publish-front]
     uses: ./.github/workflows/deploy.yml
     secrets:
       ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
