--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,9 @@ env:
   BACK_LOG_LEVEL: ${{ inputs.api-log-level }}
   PORT: ${{ inputs.port }}
   HOST: ${{ inputs.host }}
+  SERVER_IP: ${{ secrets.server-ip }}
+  SSH_PRIVATE_KEY: ${{ secrets.ssh-private-key }}
+  ANSIBLE_USER: ${{ secrets.ansible-user }}
 
 jobs:
   deploy:
@@ -74,5 +77,4 @@ jobs:
           key: ${{secrets.ssh-private-key}}
           requirements: requirements.yml
           options: |
-            --inventory ${{secrets.server-ip}}
-            --user ${{secrets.ansible-user}}
+            --inventory inventory.yml
