--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -41,6 +41,7 @@ jobs:
   #   image-name: "${{github.repository}}-back"
 
   deploy:
+    environment: Dev
     permissions:
       contents: read
       packages: write
