--- a/deploy/playbook.yml
+++ b/deploy/playbook.yml
@@ -14,19 +14,20 @@
         recreate: "always"
         project_name: cellion
         definition:
-            back:
-              image: "{{ cellion_docker_registry }}/{{ cellion_docker_back_image }}"
-              environment:
-                - "DATABASE_URL={{ cellion_db_name }}"
-                - "RUST_LOG={{ cellion_back_log_level }}"
-              volumes:
-                - "{{ cellion_db_folder }}/{{ cellion_db_name }}:{{ cellion_db_name }}"
-            front:
-              image: "{{ cellion_docker_registry }}/{{ cellion_docker_front_image }}"
-              environment:
-                - BACK_REF=back
-              ports:
-                - "{{ cellion_host }}:{{ cellion_port }}:80"
-              depends_on:
-                - back
+            services:
+              back:
+                image: "{{ cellion_docker_registry }}/{{ cellion_docker_back_image }}"
+                environment:
+                  - "DATABASE_URL={{ cellion_db_name }}"
+                  - "RUST_LOG={{ cellion_back_log_level }}"
+                volumes:
+                  - "{{ cellion_db_folder }}/{{ cellion_db_name }}:{{ cellion_db_name }}"
+              front:
+                image: "{{ cellion_docker_registry }}/{{ cellion_docker_front_image }}"
+                environment:
+                  - BACK_REF=back
+                ports:
+                  - "{{ cellion_host }}:{{ cellion_port }}:80"
+                depends_on:
+                  - back
               
