--- a/deploy/playbook.yml
+++ b/deploy/playbook.yml
@@ -23,10 +23,10 @@
               back:
                 image: "{{ cellion_docker_registry }}/{{ cellion_docker_back_image }}"
                 environment:
-                  - "DATABASE_URL=/usr/src/app/{{ cellion_db_name }}"
+                  - "DATABASE_URL=/{{ cellion_db_name }}"
                   - "RUST_LOG={{ cellion_back_log_level }}"
                 volumes:
-                  - "{{ cellion_db_folder }}/{{ cellion_db_name }}:/usr/src/app/{{ cellion_db_name }}"
+                  - "{{ cellion_db_folder }}/{{ cellion_db_name }}:/{{ cellion_db_name }}"
               front:
                 image: "{{ cellion_docker_registry }}/{{ cellion_docker_front_image }}"
                 environment:
@@ -35,16 +35,4 @@
                   - "{{ cellion_host }}:{{ cellion_port }}:80"
                 depends_on:
                   - back
-        register: output
-        
-    - name: Show results
-      ansible.builtin.debug:
-        var: output
-
-    - name: Verify that web and db services are running
-      ansible.builtin.assert:
-        that:
-          - "output.services.web.flask_web_1.state.running"
-          - "output.services.db.flask_db_1.state.running"
-
               
