--- a/deploy/playbook.yml
+++ b/deploy/playbook.yml
@@ -23,10 +23,10 @@
               back:
                 image: "{{ cellion_docker_registry }}/{{ cellion_docker_back_image }}"
                 environment:
-                  - "DATABASE_URL=/{{ cellion_db_name }}"
+                  - "DATABASE_URL={{ cellion_db_name }}"
                   - "RUST_LOG={{ cellion_back_log_level }}"
                 volumes:
-                  - "{{ cellion_db_folder }}/{{ cellion_db_name }}:/{{ cellion_db_name }}"
+                  - "{{ cellion_db_folder }}/{{ cellion_db_name }}:/usr/src/app/{{ cellion_db_name }}"
               front:
                 image: "{{ cellion_docker_registry }}/{{ cellion_docker_front_image }}"
                 environment:
