--- a/deploy/playbook.yml
+++ b/deploy/playbook.yml
@@ -25,6 +25,7 @@
                 environment:
                   - "DATABASE_URL={{ cellion_db_name }}"
                   - "RUST_LOG={{ cellion_back_log_level }}"
+                  - RUST_BACKTRACE=1
                 volumes:
                   - "{{ cellion_db_folder }}/{{ cellion_db_name }}:/usr/src/app/{{ cellion_db_name }}"
               front:
