--- a/deploy/vars.yml
+++ b/deploy/vars.yml
@@ -8,10 +8,10 @@ docker_users:
 
 
 cellion_docker_registry: "{{ lookup('env', 'DOCKER_REGISTRY') }}"
-cellion_docker_front_image: "{{ lookup('env', 'FRONT_IMAGE') }}"
-cellion_docker_back_image: "{{ lookup('env', 'BACK_IMAGE') }}"
-cellion_db_name: "{{ lookup('env', 'DB_NAME') | default('val.db') }}"
-cellion_db_folder: "{{ lookup('env', 'DB_FOLDER') | default('/opt/cellion') }}"
-cellion_back_log_level: "{{ lookup('env', 'BACK_LOG_LEVEL') | default('info') }}"
-cellion_port: "{{ lookup('env', 'PORT') | default(8080) }}"
-cellion_host: "{{ lookup('env', 'HOST') | default('0.0.0.0') }}"
+cellion_docker_front_image_name: "{{ lookup('env', 'FRONT_IMAGE_NAME') }}"
+cellion_docker_front_image_tag: "{{ lookup('env', 'FRONT_IMAGE_TAG') }}"
+cellion_docker_back_image_name: "{{ lookup('env', 'BACK_IMAGE_NAME') }}"
+cellion_docker_back_image_tag: "{{ lookup('env', 'BACK_IMAGE_TAG') }}"
+cellion_back_log_level: "info"
+cellion_port: 8080
+cellion_host: "0.0.0.0"
