--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ env:
   FRONT_IMAGE_NAME: ${{ inputs.front-image-name }}
   FRONT_IMAGE_TAG: ${{ inputs.front-image-tag }}
   BACK_IMAGE_NAME: ${{ inputs.back-image-name }}
-  BACK_IMAGE_TAG: ${{ inputs.back-image-name }}
+  BACK_IMAGE_TAG: ${{ inputs.back-image-tag }}
   SERVER_IP: ${{ secrets.server-ip }}
   SSH_PRIVATE_KEY: ${{ secrets.ssh-private-key }}
   ANSIBLE_USER: ${{ secrets.ansible-user }}
