--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -18,7 +18,7 @@ jobs:
       attestations: write
       id-token: write
 
-    needs: test-front
+    needs: [test-front, test-back]
     uses: ./.github/workflows/publish-docker.yml
     with:
       context: "front"
@@ -32,9 +32,29 @@ jobs:
       attestations: write
       id-token: write
 
-    needs: test-back
+    needs: [test-front, test-back]
     uses: ./.github/workflows/publish-docker.yml
     with:
       context: "back"
       file: "back/docker/Dockerfile"
       image-name: "${{github.repository}}-back"
+
+  deploy:
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+
+    needs: [publish-front, publish-back]
+    uses: ./.github/workflows/deploy.yml
+    secrets:
+      ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      server-ip: ${{ secrets.SERVER_IP }}
+      ansible-user: ${{ secrets.ANSIBLE_USER }}
+    with:
+      front-image-name: "${{github.repository}}-front"
+      front-image-tag: "${{ github.ref_name }}"
+      back-image-name: "${{github.repository}}-back"
+      back-image-tag: "${{ github.ref_name }}"
+      docker-registry: "ghcr.io"
