--- a/.github/workflows/test-front.yml
+++ b/.github/workflows/test-front.yml
@@ -11,9 +11,9 @@ jobs:
         working-directory: "front"
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: "22.x"
+          node-version: "20.13.1"
           cache: "npm"
           cache-dependency-path: "**/package-lock.json"
       - run: npm ci
