chore: changed name of action to be  more descriptive

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -20,7 +20,7 @@ env:
   IMAGE_NAME: ${{ inputs.image-name }}
 
 jobs:
-  build-and-push-back:
+  build-and-push-image:
     runs-on: ubuntu-latest
 
     permissions:
